# bricks

./: .gitignore  LICENSE  README.md
chronicler/: CMakeLists.txt  README.md  chronicler.cpp  idf_component.yml
chronicler/example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
chronicler/example/main/: CMakeLists.txt  app_main.cpp  idf_component.yml  main.cpp
chronicler/host_test/: CMakeLists.txt  sdkconfig.defaults
chronicler/host_test/components/rapidcheck/: CMakeLists.txt
chronicler/host_test/main/: CMakeLists.txt  idf_component.yml  main.cpp
chronicler/include/bricks/: chronicler.hpp  flash_utils.hpp
chronicler/include/bricks/chronicler/: bitmap.hpp  data_sector.hpp  geometry.hpp  metadata.hpp
chronicler/test_apps/: README.md  sdkconfig.defaults
chronicler/test_apps/main/: idf_component.yml  main.cpp
disnet/: CMakeLists.txt  README.md  disnet.cpp  disnet_instance.cpp  idf_component.yml
disnet/example/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
disnet/example/.cache/clangd/index/: main.cpp.2D1FA0823FC8649C.idx
disnet/example/main/: Kconfig.projbuild  idf_component.yml  main.cpp
disnet/include/bricks/: disnet.hpp
disnet/include/bricks/disnet/: core.hpp  instance.hpp  reliable.hpp  segmented.hpp  utils.hpp
emlabcpp/: CMakeLists.txt  README.md  idf_component.yml
events/: idf_component.yml
events/examples/basic/: CMakeLists.txt  sdkconfig.defaults
events/examples/basic/main/: idf_component.yml  main.cpp
events/include/bricks/: events.hpp
events/include/bricks/events/: idf.hpp
exceptions/include/bricks/: exceptions.hpp
glaze/: README.md  idf_component.yml
